--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+  padding-bottom: 80px;
 }
 
 h1 {
@@ -38,7 +39,7 @@ h1 {
 .welcome-section h2 {
   margin-bottom: 15px;
   font-size: 2em;
-  color: #4CAF50;
+  color: #bba90b;
 }
 
 .welcome-section p {
@@ -101,7 +102,7 @@ h1 {
   justify-content: space-between;
   align-items: center;
   padding: 15px 30px;
-  background-color: #4CAF50;
+  background-color: #dfdb07;
   color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -130,7 +131,7 @@ h1 {
 }
 
 .navbar .nav-links a:hover {
-  background-color: #45a049;
+  background-color: #978103;
   transform: translateY(-2px);
 }
 
@@ -172,7 +173,7 @@ h1 {
 .contact-form button {
   width: 100%;
   padding: 10px 20px;
-  background-color: #4CAF50;
+  background-color: #978103;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -181,7 +182,7 @@ h1 {
 }
 
 .contact-form button:hover {
-  background-color: #45a049;
+  background-color: #c4a705;
 }
 .container.recipe-detail {
   max-width: 800px;
@@ -209,7 +210,7 @@ h1 {
 
 .recipe-detail h2 {
   font-size: 2em;
-  color: #4CAF50;
+  color: #333;
   margin-top: 30px;
 }
 
@@ -232,13 +233,13 @@ h1 {
   padding: 10px 20px;
   font-size: 1.2em;
   color: #fff;
-  background-color: #4CAF50;
+  background-color: #978103;
   text-decoration: none;
   border-radius: 5px;
 }
 
 .recipe-detail a:hover {
-  background-color: #45a049;
+  background-color: #c4a705;
 }
 
 .thank-you-image {
@@ -312,4 +313,24 @@ h1 {
   .about-page p {
     font-size: 1rem;
   }
+}
+
+.footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 2px 0;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  flex-shrink: 0;
+}
+
+.footer a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  text-decoration: underline;
 }
